--- a/frontend/themes/hugo-PaperMod/assets/css/common/post-single.css
+++ b/frontend/themes/hugo-PaperMod/assets/css/common/post-single.css
@@ -241,10 +241,11 @@
 }
 
 .post-content figure > figcaption {
-    color: var(--primary);
+    color: var(--secondary);
     font-size: 16px;
     font-weight: bold;
     margin: 8px 0 16px;
+    text-align: center;
 }
 
 .post-content figure > figcaption > p {
